<resources>
    <string name="app_name">Online Health care</string>
    <string name="create_a_new_account_txt">Create A New Account</string>
    <string name="first_legal_name_edit_txt">First Legal Name</string>
    <string name="middle_name_edit_txt">Middle Name (Optional)</string>
    <string name="last_legal_name_edit_txt">Last Legal Name</string>
    <string name="email_edit_txt">Email</string>
    <string name="confirm_password_edit_txt">Confirm Password</string>
    <string name="password_edit_txt">Password</string>
    <string name="register_txt">Register</string>
    <string name="already_have_an_account_txt">Already have an account!</string>
    <string name="login_email_edit_txt">Username :</string>
    <string name="login_password_edit_txt">Password :</string>
    <string name="register_here_txt">Register Here</string>
    <string name="log_out_btn_txt">Log Out</string>
    <string name="sign_in_options_txt">Sign In Options Below</string>
    <string name="login_as_patient_btn">Login as patient</string>
    <string name="login_as_doctor_btn">Login as doctor</string>
    <string name="lets_get_started_btn">Lets Get Started</string>
    <string name="new_patient_or_doctor_sign_up_here_txt">New patient or doctor? Sign up here!</string>
    <string name="phone_number_edit_txt">Phone Number</string>
    <string name="medicare_number_edit_txt">Medicare Number</string>
    <string name="age_edit_txt">Age</string>
    <string name="height_edit_txt">Height</string>
    <string name="weight_edit_txt">Weight</string>
    <string name="welcome_back_txt">WellCome Back</string>
    <string name="change_the_avatar_txt">Change the Avatar</string>
    <string name="hist_booking_label">20</string>
    <string name="schedule_txt">Schedule</string>
    <string name="location_txt">Location</string>
    <string name="work_location_txt">Clinic B, Level 2</string>
    <string name="phone_number_txt">Phone Number</string>
    <string name="working_days_txt">Working Days</string>
    <string name="working_days_edit_txt">Mon to Fri</string>
    <string name="department_txt">Department</string>
    <string name="department_specialty_edit_txt">Surgical</string>
    <string name="self_introduce_txt">Self Introduce</string>
    <string name="self_introduce_edit_txt">Bla</string>
    <string name="update_btn">Update</string>
    <string name="patient_name_txt">Welcome</string>
    <string name="doctor_name_txt">Welcome Dr</string>
    <string name="title_txt">Student</string>
    <string name="booking_status_txt">Yes</string>
    <string name="current_bookings_status_txt">Current Bookings Status</string>
    <string name="hist_booking_txt">20</string>
    <string name="bookings_history_txt">Bookings History</string>
    <string name="age_txt">Age</string>
    <string name="blood_type_txt">Blood Type</string>
    <string name="blood_type_edit_txt">O</string>
    <string name="height_txt">Height</string>
    <string name="weight_txt">Weight</string>
    <string name="profile_first_name_label">First Name</string>
    <string name="profile_first_name_txt" />
    <string name="profile_last_name_label">Last Name</string>
    <string name="profile_last_name_txt" />
    <string name="profile_gender_label">Gender</string>
    <string name="profile_gender_txt" />
    <string name="profile_age_label">Age</string>
    <string name="profile_age_txt" />
    <string name="profile_height_label">Height</string>
    <string name="profile_height_txt" />
    <string name="profile_weight_label">Weight</string>
    <string name="profile_weight_txt" />
    <string name="profile_blood_type_label">Blood Type</string>
    <string name="profile_blood_type_txt" />
    <string name="profile_medicare_label">Medicare</string>
    <string name="profile_medicare_txt" />
    <string name="profile_staff_number_label">Staff Number</string>
    <string name="profile_staff_number_txt" />
    <string name="profile_doctor_full_name_txt" />
    <string name="profile_specialty_label">Specialty</string>
    <string name="profile_specialty_txt" />
    <string name="profile_clinic_name_label">Clinic Name</string>
    <string name="profile_clinic_name_txt" />
    <string name="profile_phone_number_label">Phone</string>
    <string name="profile_phone_number_txt" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chat_username_txt">username</string>

    <array name="height_unit">
        <item>Cm</item>
    </array>

    <array name="weight_unit">
        <item>Kg</item>
    </array>

    <array name="title">
        <item>Mr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </array>

    <array name="clinics">
        <item>Sydney</item>
        <item>Redfern</item>
        <item>NSW</item>
        <item>NY</item>
        <item>Brookyn</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>