<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientActivity"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:openDrawer="start"
    android:id="@+id/drawer_layout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightWhite"
        android:layout_gravity="start"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/doctor_menu"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/profile_doctor_full_name_txt"
            android:textSize="24sp"
            android:fontFamily="@font/bungee"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_staff_number_label"
                app:drawableLeftCompat="@drawable/ic_action_age"
                app:drawableStartCompat="@drawable/ic_action_age"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/staffNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_staff_number_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_first_name_label"
                app:drawableLeftCompat="@drawable/ic_action_age"
                app:drawableStartCompat="@drawable/ic_action_age"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_first_name_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="40dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_last_name_label"
                app:drawableLeftCompat="@drawable/ic_action_age"
                app:drawableStartCompat="@drawable/ic_action_age"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_last_name_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="40dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender_label"
                app:drawableLeftCompat="@drawable/ic_action_age"
                app:drawableStartCompat="@drawable/ic_action_age"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_gender_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="280dp"
            android:layout_marginBottom="40dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_specialty_label"
                app:drawableLeftCompat="@drawable/ic_action_age"
                app:drawableStartCompat="@drawable/ic_action_age"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_specialty_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="340dp"
            android:layout_marginBottom="40dp"
            android:background="@color/lightWhite"
            android:elevation="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_clinic_name_label"
                app:drawableLeftCompat="@drawable/ic_action_age"
                app:drawableStartCompat="@drawable/ic_action_age"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_clinic_name_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/fullName"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="400dp"
            android:layout_marginBottom="40dp"
            android:elevation="8dp">

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fontFamily="@font/bungee"
                android:text="@string/update_btn">
            </Button>
        </RelativeLayout>


    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>