<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"

    tools:context=".DoctorLoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/heart_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email_edit_txt"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/staffIDEditTxt"
        app:layout_constraintStart_toStartOf="@+id/staffIDEditTxt"
        app:layout_constraintTop_toBottomOf="@+id/staffIDEditTxt" />

    <EditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/confirm_password_edit_txt"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTxt"
        app:layout_constraintStart_toStartOf="@+id/emailEditTxt"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTxt" />

    <Button
        android:id="@+id/loginAsDoctorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login_as_doctor_btn"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTxt"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTxt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt" />

    <TextView
        android:id="@+id/createNewAccTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginAsDoctorBtn"
        app:layout_constraintStart_toStartOf="@+id/loginAsDoctorBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginAsDoctorBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <EditText
        android:id="@+id/staffIDEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Staff Number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>